# roberta-snakemake-pipeline

./: .gitignore  .gitmodules  LICENSE  README.md  Snakefile  clean_text.py  compute_ratios.py  config.yaml  create_SVM_model.py  explore_ratios.ipynb  filter_outliers.py  outlier_detection.ipynb  report.html  requirements.txt  split.sh  split_documents.py  test.py  train_tpu_pod.sh
config/: filter.yaml  preprocess.yaml
docs/: pre-training.md  preprocessing.md
envs/: binarize.yaml  bpe.yaml  patch_dict.yaml  rust.yaml
experiments/: glue.sh  requirements.txt  xnli.sh
files/SVM/: README.md  label_studio-min.json  label_studio.raw  test.raw  test_n.raw  valid.raw  valid_n.raw
files/example/: de_dedup.txt
pre-training/: README.md  test.py
pre-training/convert/: README.md  Snakefile  config.yaml
pre-training/gpu/: train.sh  train_WWM.sh  train_continued_WWM.sh
pre-training/plot/: README.md  compute_time_estimation.py  create_plot.py  gcloud_sync_plot.sh  ppl_plot.py  requirements.txt
pre-training/v3/: train_tpu.sh
pre-training/v4/: train_tpu.sh  (+4 more)
scripts/: apply_bpe.py  learn_bpe.py  preprocess.sh
tools/: create_plot.py  requirements.txt
workflow_experiments/: Snakefile  config.yaml
workflow_filterdata/: README.md  Snakefile  config.yaml  requirements.txt
workflow_filterdata/scripts/compute_ratios/: Cargo.toml
workflow_filterdata/scripts/compute_ratios/src/: main.rs
workflow_filterdata/scripts/langdetect/: Cargo.toml
workflow_filterdata/scripts/langdetect/src/: main.rs
workflow_preprocess/: README.md  Snakefile  config.yaml
(+48 files in other folders)
