[package]
name = "compute_ratios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natural = "0.3.0"
itertools = "0.10.5"
polars = "0.28.0"
polars-arrow = "0.28.0"
pyo3 = { version = "0.18.2", features = ["extension-module"] }
