[package]
name = "langdetect"
version = "0.1.0"
authors = ["Raphael Scheible <raphael.scheible@uniklinik-freiburg.de>"]
edition = "2018"
ld-script = "x86_64-conda_cos6-linux-gnu-cc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whatlang = "0.16.2"
clap = "2.33.3"
